# m5stack-core

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
conf/: lv_conf.h
examples/cores3/: Cargo.toml  build.rs
examples/cores3/src/: main.rs
examples/fire27/: Cargo.toml  build.rs
examples/fire27/src/: main.rs
src/: fmt.rs  lib.rs
src/driver/: aw9523b.rs  axp2101.rs  ds16b20.rs  ft6336u.rs  mod.rs  pcnt.rs  pps.rs  radio.rs
src/io/: mod.rs  ow_temp.rs  pps.rs  rpm.rs  shared_i2c.rs
